# PracticaGreedy

./: .gitignore  README.md  mide-tiempos-pvc1.sh
Entrega/: Makefile  data_jukebox  data_pvc  mide-tiempos-jukebox.sh  mide-tiempos-pvc1.sh  mide-tiempos-pvc2 .sh  mide-tiempos-pvc2.sh  mide-tiempos-pvc3.sh
Entrega/Generador/: generador.cpp
Entrega/Generador-pvc/: generador-pvc.cpp
Entrega/Pvc1/: pvc1.cpp
Entrega/Pvc2/: pvc2.cpp
Entrega/Pvc3/: pvc3.cpp
Entrega/Voraz/: main.cpp
Jukebox/: CMakeLists.txt
Jukebox/data/: data_jukebox  data_pvc  prueba  prueba-pvc
Jukebox/include/: Cancion.h  punto.h
Jukebox/src/: Cancion.cpp  generador-pvc.cpp  main.cpp  punto.cpp  pvc1.cpp  pvc2.cpp  pvc3.cpp
